--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,1 +1,9 @@
-/* Add CSS Styling */
+.avatar.proportioned {
+    width: 300px;
+    height: 800px;
+}
+
+.avatar.distorted {
+    width: 200px;
+    height: 200%;
+}
